# property_tokenisation

./: .gitignore  README.md  SRS.md  marketData.json  package-lock.json  package.json  server.js
Backend/: .env.example  README.md  config.py  main.py  property_token_idl.json  requirements.txt
Backend/models/: schemas.py
Backend/programs/: property_token.rs
Backend/routes/: admin.py  auth.py  governance.py  payments.py  portfolio.py  properties.py  seller.py  tokens.py  wallet.py
Backend/services/: auth_service.py  payment_service.py  solana_service.py
app/: globals.css  layout.tsx
app/dashboard/: page.tsx
app/governance/: page.tsx
app/marketplace/: page.tsx
app/portfolio/: page.tsx
app/properties/[id]/: page.tsx
app/seller/: page.tsx
app/seller/onboard/: page.tsx
app/watchlist/: page.tsx
components/: app-sidebar.tsx  faq-section.tsx  features-section.tsx  navbar.tsx  property-card.tsx  stat-card.tsx  stats-section.tsx  trust-section.tsx  why-choose-us-section.tsx
lib/: api-client.ts  mock-data.ts
property_token/: Anchor.toml
property_token/programs/property_token/: Cargo.toml
property_token/programs/property_token/src/: error.rs  lib.rs  state.rs
property_token/programs/property_token/src/instructions/: buy_tokens.rs  initialize_platform.rs  mod.rs  register_property.rs  sell_tokens.rs
property_tokenisation-main/property_tokenisation-main/: next.config.mjs  package.json
property_tokenisation-main/property_tokenisation-main/app/: layout.tsx  page.tsx
property_tokenisation-main/property_tokenisation-main/components/: footer.tsx  (+6 more)
(+14 files in other folders)
